--- a/container.yml
+++ b/container.yml
@@ -4,14 +4,14 @@
   tasks:
         
     - name: Run docker container
-      command: "docker stop raam043/test_project:latest"
-      command: "docker rm -f raam043/test_project:latest"
-      command: "docker image rm -f raam043/test_project:latest"
+      command: "docker stop raam043/myapp-project"
+      command: "docker rm -f raam043/myapp-project"
+      command: "docker image rm -f raam043/myapp-project"
       
     - name: Run docker container
       docker_container:
         name: WebServer
-        image: raam043/test_project:latest
+        image: raam043/myapp-project
         state: started
         exposed_ports:
         - "80"
